--- a/style.css
+++ b/style.css
@@ -126,9 +126,47 @@ h3 {
 
 
 /*---HEADER---*/
-nav {
-  display:none; /*for now keep the nav bar hidden so it doesnt get in the way*/
+header {
+  display:flex;
+  justify-content: space-between;
+  padding: 1em;
+}
+
+.nav {
+  position:fixed; /*as you scroll down the page, whatever is "fixed" will stay with you*/
+  background: var(--clr-dark); 
+  color: var(--clr-light); 
+  top: 0; 
+  bottom: 0;
+  left: 0;
+  right:0;
+  z-index: 100; /*moves the item in the z-axis*/
+
+  /*2 different states are required*/ 
+  transform:translateX(100%); /*will move the nav menu X% off the screen*/
+  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
 } 
+
+.nav__list {
+  list-style:none;
+  display:flex;
+  height:100%;
+  flex-direction:column; 
+  justify-content: space-evenly;
+  align-items:center; 
+  margin:0; 
+  padding:0;
+} 
+
+.nav__link {
+  color: inherit;
+  font-weight:var(--fw-bold);
+  font-size: var(--fs-h3);
+  text-decoration:none;
+} 
+.nav__link:hover {
+  color:var(--clr-accent);
+}
 
 /*---END HEADER---*/
 
@@ -173,10 +211,68 @@ nav {
 
 /*---PORTFOLIO---*/
 .my-portolio {
-
+  text-align:center;
 }
 
-.portfolio-background {
-  /*i am trying to give this image an orange tint. Perhaps i should use the css 
-  background-image property instead of using the image in html.*/
-}  
+.section__subtitle--portfolio {
+  color: var(--clr-dark);
+  font-weight: var(--fw-bold);
+  margin-bottom: 1em;
+  text-align:center;
+}
+
+.portfolio-body {
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.portfolio-body__item {
+  transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 0.1), opacity 250ms linear;
+  overflow:hidden;
+}
+
+.portfolio__img:hover {
+  transform:scale(1.25); 
+  opacity:0.85;
+}
+
+/*--END MY PORTFOLIO--*/ 
+
+
+/*--FOOTER--*/ 
+.footer {
+  background: var(--clr-dark);
+  color: var(--clr-accent); 
+  text-align: center;
+  padding: 2.5em 0; 
+  margin-top:5em;
+} 
+
+
+/*this section is somewhat redundant*/
+.footer a {
+  color: red;
+  text-decoration:none;
+  font-size: var(--fs-h3); 
+  font-weight:var(--fw-bold);
+} 
+.footer__link {
+  font-size: var(--fs-h3); 
+  font-weight:var(--fw-bold);
+}
+/*perhaps put the items in the same class*/
+
+
+.footer__link:hover, 
+.footer a:hover {
+  opacity:0.8;
+  text-decoration: underline; 
+} 
+
+.contact-info__item {
+  list-style:none;
+  display:flex;
+  justify-content: center;
+  margin: 2em 0; 
+  padding: 0;
+}
