--- a/style.css
+++ b/style.css
@@ -1,330 +1,257 @@
-*, /* a star '*' selects every element*/
-*::before, /* comma is used to separate the elements you are applying rules to.*/
+*,
+*::before, 
 *::after {
-  /* "::before" and "::after" are CSS pseudo elements*/
-  box-sizing: border-box;
+    box-sizing:border-box;
 }
 
-/*-------APPLYING CSS CUSTOM PROPERTIES:---------*/
 :root {
-  /*the "root" selector allows you to target the highest-level “parent” element in the DOM. 
-  It is used to style content based on its relationship with parent and sibling content*/
+    --ff-primary:"Source Sans Pro", sans-serif;
+    --ff-secondary: "Source Code Pro", monospace;
+    --fs-h1: 3rem;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
+    --fs-body: 1rem;
+    --fw-regular: 300;
+    --fw-bold: 900;
+    --clr-light: #fff;
+    --clr-dark: #303030;
+    --clr-accent: #16e0bd;
 
-  /*these are CSS custom properties, and are written like this. This is not BEM notation for fun: 
-  this is the way it must be written. It is called "CSS Custom Property Notation".*/
-
-  /*font family: */
-  --ff-primary: "Source Sans Pro", sans-serif;
-  --ff-secondary: "Source Code Pro", monospace;
-
-  /*font wight: */
-  --fw-regular: 300;
-  --fw-bold: 900;
-
-  /*color: */
-  --clr-light: #fff;
-  --clr-dark: #303030;
-  --clr-accent: #16e0bd;
-
-  /*font size: rem units seem to give nice and big fonts that suit headings*/
-  --fs-h1: 3rem;
-  --fs-h2: 2.25rem;
-  --fs-h3: 1.25rem;
-  --fs-body: 1rem;
-
-  /*creating box shadow effect for future use:*/
-  --bs: 0.25em 0.25em 0.75em rgba(0,0,0, 0.25),
+    --box-shadow1: 0.25em 0.25em 0.75em rgba(0,0,0, 0.25),
         0.125em, 0.125em, 0.25em, rgba(0,0,0,0.15);
-  /*This creates a shadow effect from 2 angles. Apply this by entering "box-shadow:" then 
-  call "var(--bs) to get a universal and consistant box shadow.*/
 }
 
-/*Media Query uses the @media  rule to include a block of CSS properties only if a certain 
-condition is true.*/
 @media (min-width: 800px) { /*800px is generally a good query size*/
-  :root {
-    --fs-h1: 4.5rem;
-    --fs-h2: 3.75rem;
-    --fs-h3: 1.5rem;
-    --fs-body: 1.125rem;
+    :root {
+      --fs-h1: 4.5rem;
+      --fs-h2: 3.75rem;
+      --fs-h3: 1.5rem;
+      --fs-body: 1.125rem;
+    }
+  } 
+
+  body {
+    background: var(--clr-light); 
+    color:var(--clr-dark);
+    margin:0; 
+    font-family:var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height:1.6;
+    transform-style:preserve-3d;
+  } 
+
+  h1, h2, h3 {
+    line-height:1.1;
+    margin:0;
   }
-}
-/*-----END CSS CUSTOM PROPERTIES------*/
-
-
-/*-----GENERAL STYLES-------*/
-body {
-  background: var(--clr-light); 
-  /* "--clr-light" was defined in the root. Now it is being accessedhere like a VARIABLE. 
-  Also note the "var" word in front of it!!*/
-  color:var(--clr-dark);
-  margin:0; 
-  font-family:var(--ff-primary);
-  font-size: var(--fs-body);
-  line-height:1.6; /*1.6 is a good general line height*/
-}
-
-
-
-img {
-  display:block;
-  max-width:100%;
-  /* box-shadow: var(--bs); used for testing box-shadow */
-}
-
-strong {
-  font-weight:var(--fw-bold)
-}
-
-@media (max-width: 700px) { /*when the device has a max screen size of 600px, apply padding:*/
-  section {
-    padding:5em 2em;
+  h1 {
+    font-size: var(--fs-h1)
   }
-}
-/*-------END GENERAL STYLES---------*/ 
+  h2 {
+    font-size: var(--fs-h2)
+  }
+  h3 {
+    font-size: var(--fs-h3)
+  }
 
-
-/*-------TYPOGRAPHY (pertaining to fonts, text, writing etc)---------*/
-h1, h2, h3 {
-  line-height:1.1; /*try 1.1 first, then adjust further if needed.*/
-  margin:0;
-}
-
-h1 {
-  font-size: var(--fs-h1)
-}
-h2 {
-  font-size: var(--fs-h2)
-}
-h3 {
-  font-size: var(--fs-h3)
-}
-
-
-.section__title {
-  margin-bottom:0.1em;
-  margin-top:1em;
-  text-align:center;
-} 
-.section__title--intro {
-  font-weight: var(--fw-bold);
-  text-align:center;
-  margin-top:0.2em;
-}
-.section__subtitle {
-  margin:0;
-  font-size: var(--fs-h3); /*again using a variable. Using the variable is handy: you dont need 
-  to remember what pixel value it is, the mediaqueries etc. As long as you use the same variable, 
-  its been taken care of when you created the variable.*/
-} 
-.section__subtitle--intro, 
-.section__subtitle--about {
-  background: var(--clr-accent); 
-  font-family: var(--ff-secondary);
-  /* margin-bottom: 1em; */ /*perhaps not so good looking*/
-} 
-
-
-
-/*---HEADER---*/
-header {
-  display:flex;
-  justify-content: space-between;
-  padding: 1em;
-}
-
-.nav {
-  position:fixed; /*as you scroll down the page, whatever is "fixed" will stay with you*/
-  background: var(--clr-dark); 
-  color: var(--clr-light); 
-  top: 0; 
-  bottom: 0;
-  left: 0;
-  right:0;
-  z-index: 100; /*moves the item in the z-axis*/
-
-  /*2 different states are required*/ 
-  transform:translateX(100%); /*will move the nav menu X% off the screen*/
-  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
-} 
-
-.nav__list {
-  list-style:none;
-  display:flex;
-  height:100%;
-  flex-direction:column; 
-  justify-content: space-evenly;
-  align-items:center; 
-  margin:0; 
-  padding:0;
-} 
-
-.nav__link {
-  color: inherit;
-  font-weight:var(--fw-bold);
-  font-size: var(--fs-h2);
-  text-decoration:none;
-} 
-.nav__link:hover {
-  color: var(--clr-accent);
-} 
-
-.nav-toggle {
-  padding:0.5em;
-  background:transparent; 
-  border:0;
-  cursor:pointer;
-  position:absolute; 
-  right:1em;
-  top:1em; 
-  z-index:1000;
-}
-
-.nav-open .nav {
-  /*background:red; /*testing if JS is working*/
-  transform: translateX(0);
-}
-.nav-open .nav-toggle {
-  position:fixed; /* nav will change from "position:absolute" to "position:fixed" when nav is open
-  so that it doesnt disappear.*/ 
-}
-.nav-open .hamburger {
-  transform:rotate(180deg); /*applied a cool rotation and rotation time*/
-  transition: all 0.5s;
-}
-
-
-.hamburger {
-  display:block;
-  position:relative;
-} 
-
-.hamburger,
-.hamburger::before, 
-.hamburger::after {
-  background: var(--clr-accent);
-  width: 2em; 
-  height: 3px; 
-  border-radius:1em;
-  transition: transfrom 250ms ease-in-out;
-}
-
-.hamburger::before, 
-.hamburger::after {
-  content: ""; /*pseudo elements dont work unless they have "content". This may be left as blank.*/
-  position:absolute; /*positions an element to its closes ancestor or its initial containing block*/
-  left:0; 
-  right:0; 
-} 
-
-.hamburger::before {top:6px;}
-.hamburger::after {bottom:6px;}
-
-/*---END HEADER---*/
-
-
-/*---INTRODUCTION---*/
-.intro {
-  position:relative;
-}
-.section__subtitle--intro {
-  text-align:center;
-}
-/*--END INTRODUCTION--*/
-
-
-/*---SERVICES---*/
-.services {
-  background-color: var(--clr-accent);
-  /* background-image: UNUSED! */
-  color: var(--clr-dark);
-  /* background-image:; */  /*to add a background image at some point*/
-  /* background-size:cover; */ /*avoids having the image repeat its self. Use with the above code*/
-  text-align:center;
-
-} 
-
-@media (min-width:800px) {
-  .services {
+  .header {
+    display:flex; 
+    justify-content:space-between; 
+    padding:1em;
+  }
+  .nav {
+    position:fixed; /*as you scroll down the page, whatever is "fixed" will stay with you*/
+    background: var(--clr-dark); 
+    color: var(--clr-light); 
+    top: 0; 
+    bottom: 0;
+    left: 0;
+    right:0;
+    z-index: 100; /*moves the item in the z-axis*/
+  
+    /*2 different states are required*/ 
+    transform:translateX(100%); /*will move the nav menu X% off the screen*/
+    transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
+  }
+  .nav_list {
+    list-style:none;
     display:flex;
+    height:30%;
+    flex-direction:column; 
+    justify-content: space-evenly;
+    align-items:center; 
+    margin:0; 
+    padding:0;
   }
-  .service + .service { /*COMBINATOR WITH ADJACENT SIBLING SELECTOR*/
-    margin-left:2em;
+  .nav_link {
+    color: inherit;
+    font-weight:var(--fw-bold);
+    font-size: var(--fs-h2);
+    text-decoration:none;
+  } 
+  .nav_link:hover {
+    color: var(--clr-accent);
   }
+  .nav_toggle {
+    padding:0.5em;
+    background:transparent; 
+    border:0;
+    cursor:pointer;
+    position:absolute; 
+    right:1em;
+    top:0em; 
+    z-index:1000;
+  }
+  .nav-open .nav {
+    /*background:red; /*testing if JS is working*/
+    transform: translateX(0);
+  }
+  .nav-open .nav_toggle {
+    position:fixed; /* nav will change from "position:absolute" to "position:fixed" when nav is open
+    so that it doesnt disappear.*/ 
+  }
+  .nav-open .hamburger {
+    transform:rotate(180deg); /*applied a cool rotation and rotation time*/
+    transition: all 0.5s;
+  }
+  .hamburger {
+    display:block;
+    position:relative;
+    margin-top:2px;
+  } 
+  .hamburger,
+  .hamburger::before, 
+  .hamburger::after {
+    background: var(--clr-accent);
+    width: 2em; 
+    height: 3px; 
+    border-radius:1em;
+    transition: transfrom 250ms ease-in-out;
+  }
+  .hamburger::before, 
+  .hamburger::after {
+    content: ""; /*pseudo elements dont work unless they have "content". This may be left as blank.*/
+    position:absolute; /*positions an element to its closes ancestor or its initial containing block*/
+    left:0; 
+    right:0; 
+  } 
+
+  .hamburger::before {top:6px;}
+  .hamburger::after {bottom:6px;}
+
+  .intro {
+    /*margin-bottom:0.1em;
+    margin-top:1em;*/
+    text-align:center;
+    font-weight: var(--fw-bold);
+  }
+  .intro h1 {
+    padding-top:15px;
+    padding-bottom:0; 
+    margin-bottom:0;
+    margin-left:4%; 
+    margin-right:4%;
+  }
+  .intro_p{
+    background: var(--clr-accent); 
+    font-family: var(--ff-secondary);
+    font-size: 25px;
+    font-weight: 300;
+    /*padding-bottom: 10%; NO*/
+    margin-bottom:0%;
+    margin-top:10px;
+  }
+  .donut_container {
+    position:relative;
+    text-align:center;
+    color:rgb(12, 5, 1);
+  }
+  .donut_text {
+    position:absolute;
+    top:30%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    font-family:monospace;
+    font-size: 100px;
+    font-weight:300;
+  }
+  .donut_text span::before {
+    content: "student"; 
+    animation: animate infinite 3s; 
+  }
+  @keyframes animate {
+    0% {
+      content:"student";
+    }
+    25% {
+      content:"developer";
+    }
+    50% {
+      content:"enthusiast";
+    }
+    75% {
+      content:"donut!";
+    }
+  }
+
+  .specialization {
+    text-align:center;
+  }
+  .specialization h2{
+    margin-top:1.5em;
+  }
+  .specialization p {
+    font-family: var(--ff-secondary);
+    font-size: 25px;
+    margin-top:25px;
+  }
+
+  img {
+    display:block;
+    width:100%;
+  }
+
+  .column img {
+    width:100%;
+  }
+  .column {
+    float:left;
+    width: 33.33%;
+    padding: 5px;
+  }
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
-.service {
-  max-width: 500px; 
-  margin: 0 auto;
-}
-
-/*---END MY SERVICES---*/ 
+/*EXPERIMENTAL CARD*/
 
 
-/*---PORTFOLIO---*/
-.my-portolio {
+/*the container should be slightly smaller than the card*/
+
+.portfolio {
   text-align:center;
 }
-
-.section__subtitle--portfolio {
-  color: var(--clr-dark);
-  font-weight: var(--fw-bold);
-  margin-bottom: 1em;
-  text-align:center;
+.portfolio h2 {
+  margin-top:1.5em;
+}
+.portfolio p {
+  font-family: var(--ff-secondary);
+  font-size: 25px;
+  margin-top:25px;
 }
 
-.portfolio-body {
+.portfolio_display {
   display:grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
-
-.portfolio-body__item {
+.portfolio_link {
   transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 0.1), opacity 250ms linear;
   overflow:hidden;
 }
-
 .portfolio__img:hover {
   transform:scale(1.25); 
   opacity:0.85;
-}
-
-/*--END MY PORTFOLIO--*/ 
-
-
-/*--FOOTER--*/ 
-.footer {
-  background: var(--clr-dark);
-  color: var(--clr-accent); 
-  text-align: center;
-  padding: 2.5em 0; 
-  margin-top:5em;
-} 
-
-
-/*this section is somewhat redundant*/
-.footer a {
-  color: red;
-  text-decoration:none;
-  font-size: var(--fs-h3); 
-  font-weight:var(--fw-bold);
-} 
-.footer__link {
-  font-size: var(--fs-h3); 
-  font-weight:var(--fw-bold);
-}
-/*perhaps put the items in the same class*/
-
-
-.footer__link:hover, 
-.footer a:hover {
-  opacity:0.8;
-  text-decoration: underline; 
-} 
-
-.contact-info__item {
-  list-style:none;
-  display:flex;
-  justify-content: center;
-  margin: 2em 0; 
-  padding: 0;
 }
